@@ -25,6 +25,8 @@ Version CVS HEAD (?)
     - when saving, override the gig::Regions sample reference simply by
       the region's first dimension region's sample (avoids an exception
       when trying to save a new instrument)
+    - fixed AddDimension() method which did not fill out all mandatory
+      dimension definition fields
 
   * src/DLS.cpp, src/DLS.h:
     - added Instrument::MoveRegion method
